Fix core.Modules query: InstalledVersion -> SchemaVersion, add ReleaseVersion